@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23426: run_setup was broken in distutils.
+  Patch from Alexander Belopolsky.
+
 - Issue #17527: Add PATCH to wsgiref.validator. Patch from Luca Sbardella.
 
 - Issue #13938: 2to3 converts StringTypes to a tuple. Patch from Mark Hammond.
